objects/Person_Location__c.object
<CustomObject>
    <description>Locations associated with a person</description>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>Location that a person is impacted by during the crisis</inlineHelpText>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>People</relationshipLabel>
        <relationshipName>Person_Locations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <inlineHelpText>Person that is related to the location</inlineHelpText>
        <label>Person</label>
        <referenceTo>Impacted_Person__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Person_Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Location__c</fullName>
        <inlineHelpText>Person&apos;s relation to a location</inlineHelpText>
        <label>Relationship to Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Work Location</fullName>
                </value>
                <value>
                    <fullName>Secondary Work Location</fullName>
                </value>
                <value>
                    <fullName>Visited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Person Location</label>
    <nameField>
        <label>Persons Relationship to Location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Person Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>